# openclaude

./: .gitignore  AGENTS.md  Cargo.toml  OPENCODE_REFERENCE.md  README.md
docs/: CLAUDE_CODE_REFERENCE.md  OPENCODE_REFERENCE.md
plugin/: package-lock.json  package.json  tsconfig.json
plugin/src/: index.ts
src/: alias.rs  app.rs  benchmark.rs  bootstrap.rs  cli.rs  config.rs  console.rs  exec.rs  lib.rs  main.rs  reference.rs
src/claude/: cli.rs  mod.rs  prompt.rs  result.rs  runtime.rs  stream.rs  tool_name.rs  translate.rs
src/integration/: adapter.rs  bridge.rs  mod.rs  opencode.rs
src/provider/: catalog.rs  mod.rs  model.rs  runtime.rs  session.rs  stream.rs
src/server/: http.rs  mod.rs  openai.rs  protocol.rs  service.rs  stdio.rs
tests/: bootstrap_launch.rs  http_binary.rs  latency_benchmark.rs  opencode_session.rs  protocol_flows.rs
tests/fixtures/: assistant_tool_history.json  basic_chat.json  stream_text.json  tool_choice_function.json
tests/golden/: basic_chat_stream.sse  tool_call_stream.sse
